# wizzup.github.io

./: .gitignore  .gitmodules  Makefile  README.md  Site.hs  about.html  about.rst  about.tex  about.tex.metadata  archive.html  atom.xml  contribution.html  contribution.rst  contribution.tex  contribution.tex.metadata  default.nix  draft-tex.sh  index.html  index.tex  makefile  manifest.json  newpost.sh  package.yaml  params.json  polygot.html  polygot.rst  robots.txt  shell.nix  site.hs  sitemap.xml  style-test.html  sw.js  wizzup-github-com.cabal
about/: index.html
archive/: index.html
codes/: escape-from-zurg.hs  fox-goose-beans.hs  pythagorean-triple.hs  pythagorean-triple.py
contribution/: index.html
css/: default.css  sourcecode.css
draft/: index.html
images/: README.md
journey/: index.html
me/: auto.md  baking.md  electronics.md  gardening.md  hobbies.md  programming.rst  restoration.md  tipjar.tex
polyglot/: index.html
posts/: 2017-02-01-first.html  2017-05-31-new.html  2017-05-31-new.rst  2017-05-31-new.rst.metadata  2017-06-01-new.html  2017-06-02-markdown.html  2017-06-02-markdown.md  2017-06-02-markdown.md.metadata  2017-06-02-tex.html  2017-06-02-tex.tex  2017-06-02-tex.tex.metadata  autotools_th.md  git-commit-msg_th.md  git-tip-shallow-clone_th.md  git-tip-shallow-clone_th.md.metadata  hakyll-mathjax.tex  new.sh  nix-haskell-cabal.md  nix-shell-haskell-invocation.md  nix-shell-virtualenv.tex  nix-vim-haskell.rst  nix-vim-python.md  recursive_data_function-th_1.md  recursive_data_function-th_2.md  recursive_data_function-th_3.md  (+1 more)
(+43 files in other folders)
