name:               wizzup-github-com
version:            0.1.0.0
synopsis:           wizzup.github.com
author:             wisut  hantanong
maintainer:         wizzup@gmail.com
description:        Please see README.md
category:           None

cabal-version:      >= 1.24
build-type:         Simple
extra-source-files: README.md

executable          site
  main-is:          site.hs
  build-depends:    base
                  , hakyll
                  , pandoc
                  , filepath
  default-language: Haskell2010
